# incarnation

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  t.s
amd64/: Cargo.toml  b.rs  instructions.data
amd64/src/: aso.rs  assembler.rs  emitter.rs  lib.rs  modrm.rs  oso.rs  register.rs  rex.rs  sib.rs
amd64/src/assembler/: mod.rs  mov.rs
asm-syntax/: Cargo.toml
asm-syntax/src/: error.rs  lib.rs  parser.rs
bootstrap/: sasm-strings.sasm  sasm.sasm  symbol-table.sasm
bootstrap/sasm/: sasm.sasm  test-malloc.sasm
elf/src/: lib.rs
libs/collections/: arraybuf.inc
libs/core/: intrinsics.inc
libs/unix/: lib.inc
parser/: Cargo.toml
parser/src/: error.rs  lib.rs
riscv/src/: assembler.rs  main.rs
src/: amd64.rs  assembly.rs  ast.rs  executable.rs  lib.rs  main.rs
src/parser/: mod.rs  token.rs  tokenizer.rs
string-interner/: Cargo.toml
string-interner/src/: lib.rs
tests/: assembly.rs
tokenizer/: Cargo.toml
tokenizer/src/: error.rs  lib.rs  token.rs  tokenizer.rs
type-checker/: Cargo.toml
type-checker/src/: env.rs  error.rs  lib.rs
