[package]
name = "incarnation"
version = "0.1.0"
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]

#[dependencies.amd64]
#path = "amd64"

[dependencies.asm-syntax]
path = "asm-syntax"

[dependencies.parser]
path = "parser"

[dependencies.string-interner]
path = "string-interner"

[dependencies.tokenizer]
path = "tokenizer"

[dependencies.type-checker]
path = "type-checker"
